--- a/cardano-mpfs-offchain/cardano-mpfs-offchain.cabal
+++ b/cardano-mpfs-offchain/cardano-mpfs-offchain.cabal
@@ -6,6 +6,7 @@ description:
   Record-of-functions interfaces for the Cardano Merkle
   Patricia Forestry offchain service. Uses real
   cardano-ledger types for all Cardano primitives.
+  Includes mock implementations for testing.
 
 license:       Apache-2.0
 license-file:  LICENSE
@@ -25,22 +26,33 @@ library
   default-language: GHC2021
   hs-source-dirs:   lib
   build-depends:
-    , base                   >=4.18 && <5
-    , bytestring             >=0.11 && <0.13
+    , base                       >=4.18 && <5
+    , bytestring                 >=0.11 && <0.13
     , cardano-crypto-class
     , cardano-ledger-api
     , cardano-ledger-binary
     , cardano-ledger-conway
     , cardano-ledger-core
     , cardano-ledger-mary
+    , containers                 >=0.6  && <0.8
+    , haskell-mpfs
+    , haskell-mpfs:mpf-test-lib
 
   exposed-modules:
     Cardano.MPFS.Context
     Cardano.MPFS.Indexer
+    Cardano.MPFS.Mock.Context
+    Cardano.MPFS.Mock.Indexer
+    Cardano.MPFS.Mock.Provider
+    Cardano.MPFS.Mock.State
+    Cardano.MPFS.Mock.Submitter
+    Cardano.MPFS.Mock.TxBuilder
     Cardano.MPFS.Provider
     Cardano.MPFS.State
     Cardano.MPFS.Submitter
     Cardano.MPFS.Trie
+    Cardano.MPFS.Trie.Pure
+    Cardano.MPFS.Trie.PureManager
     Cardano.MPFS.TxBuilder
     Cardano.MPFS.Types
 
