feat: add Application wiring and Skeleton Indexer
Application.withApplication brackets an N2C connection with
real Provider/Submitter and mock State/TrieManager/TxBuilder.

Indexer.Skeleton provides lifecycle IORef/MVar tracking with
a genesis tip — placeholder until csmt chain sync is wired.

--- a/cardano-mpfs-offchain/cardano-mpfs-offchain.cabal
+++ b/cardano-mpfs-offchain/cardano-mpfs-offchain.cabal
@@ -63,10 +63,12 @@ library
     , typed-protocols
 
   exposed-modules:
+    Cardano.MPFS.Application
     Cardano.MPFS.Balance
     Cardano.MPFS.Blueprint
     Cardano.MPFS.Context
     Cardano.MPFS.Indexer
+    Cardano.MPFS.Indexer.Skeleton
     Cardano.MPFS.Mock.Context
     Cardano.MPFS.Mock.Indexer
     Cardano.MPFS.Mock.Provider
