--- a/cardano-mpfs-offchain/cardano-mpfs-offchain.cabal
+++ b/cardano-mpfs-offchain/cardano-mpfs-offchain.cabal
@@ -42,6 +42,7 @@ library
     , cardano-ledger-core
     , cardano-ledger-mary
     , cardano-strict-containers
+    , cardano-utxo-csmt:library
     , containers                             >=0.6  && <0.8
     , contra-tracer
     , crypton
@@ -69,6 +70,7 @@ library
   exposed-modules:
     Cardano.MPFS.Application
     Cardano.MPFS.Balance
+    Cardano.MPFS.Indexer.CageEvent
     Cardano.MPFS.Blueprint
     Cardano.MPFS.Context
     Cardano.MPFS.Indexer
@@ -131,6 +133,7 @@ test-suite unit-tests
   other-modules:
     Cardano.MPFS.BalanceSpec
     Cardano.MPFS.Generators
+    Cardano.MPFS.Indexer.CageEventSpec
     Cardano.MPFS.OnChainSpec
     Cardano.MPFS.ProofSpec
     Cardano.MPFS.StateSpec
