feat: wire dual N2C connections with 10 column families
Open RocksDB with 10 column families (4 UTxO + 6 cage/trie),
create the cardano-utxo-csmt state machine, wire CageFollower
as the ChainSync block processor, and run a second N2C
connection for LocalStateQuery + LocalTxSubmission.

--- a/cardano-mpfs-offchain/cardano-mpfs-offchain.cabal
+++ b/cardano-mpfs-offchain/cardano-mpfs-offchain.cabal
@@ -47,6 +47,7 @@ library
     , cardano-ledger-core
     , cardano-ledger-mary
     , cardano-strict-containers
+    , cardano-utxo-csmt:application
     , cardano-utxo-csmt:library
     , cborg
     , containers                               >=0.6  && <0.8
