refactor: unify cage and UTxO transaction runners via mapColumns
Replace two separate RocksDB transaction runners with a single unified
runner over all 10 column families. Use mapColumns to project into cage
(InCage) and UTxO (InUtxo) subsets, ensuring atomic cross-domain
transactions.

Closes #71

--- a/cardano-mpfs-offchain/cardano-mpfs-offchain.cabal
+++ b/cardano-mpfs-offchain/cardano-mpfs-offchain.cabal
@@ -55,6 +55,7 @@ library
     , containers                               >=0.6  && <0.8
     , contra-tracer
     , crypton
+    , dependent-map
     , lens
     , memory
     , merkle-patricia-forestry
